--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b2e768">  <td>22/03/14 16:47:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:testRunners.TestRun$FirstTestRunner@4dbb42b7]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@20224131</td>   <td></td> </tr>
-<tr bgcolor="b2e768">  <td>22/03/14 16:47:52</td>   <td>122</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:testRunners.TestRun$FirstTestRunner@4dbb42b7]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@20224131</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/03/15 18:45:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Steps.startDriver()[pri:0, instance:stepDefinitions.Steps@505fc5a4]">&gt;&gt;startDriver</td> 
+<td>&nbsp;</td>  <td>main@402009651</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/03/15 18:45:47</td>   <td>6382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Steps.terminateBrowser()[pri:0, instance:stepDefinitions.Steps@505fc5a4]">&lt;&lt;terminateBrowser</td> 
+<td>&nbsp;</td>  <td>main@402009651</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/03/15 18:45:44</td>   <td>3439</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Steps.testMethod()[pri:0, instance:stepDefinitions.Steps@505fc5a4]">testMethod</td> 
+  <td>main@402009651</td>   <td></td> </tr>
 </table>
